--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.10.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@tanstack/react-table": "^8.20.6",
     "framer-motion": "^12.0.0",
     "next": "15.1.5",
     "react": "^19.0.0",
