--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^2.10.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/poppins": "^5.1.1",
+    "@fontsource/source-sans-pro": "^5.1.0",
     "@tanstack/react-table": "^8.20.6",
     "formik": "^2.4.6",
     "framer-motion": "^12.0.0",
